<resources>
    <string name="app_name">Pick-E-Eater</string>
    <string name="title_home">Home</string>
    <string name="title_filters">Filters</string>
    <string name="title_notifications">Notifications</string>
    <string name="rating">Rating</string>
    <string name="cost">Cost</string>
    <string name="location">Choose a Location</string>
    <string name="distance">Distance from Current Location (km)</string>
    <string name="food_type">Food Type</string>
    <string name="randomize">Randomize!</string>
    <string name="select_all">Select All</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_compose">Compose</string>
</resources>